--- a/publication/markdown/summary.Rmd
+++ b/publication/markdown/summary.Rmd
@@ -37,22 +37,20 @@ format_perc <- function(x, dp = 1){
 
 # LDP Dataset
 pds <- 
-  read_rds(
-    here("data", "publication", glue("{pub_date}_pub-data.rds"))
-  ) %>%
+  read_rds(data_path(directory = "publication", 
+                    type = "pub_data",
+                    ext = "rds"))%>%
   filter(ijb != "Unknown" & referrals > 0)
 
 # Expected Diagnoses (Incidence)
-exp <- read_csv(here("reference-files", "expected-diagnoses.csv")) %>%
+exp <- read_csv(exp_diagnoses_path()) %>%
   select(fy, health_board = health_board_label, diagnoses)
 
 # Error rates 
 err <- 
-  read_rds(
-    here("data", 
-         glue("{fy}-{substr(as.numeric(fy)+1, 3, 4)}/Q{qt}"),
-         glue("{fy}-{qt}_error-summary.rds"))
-  ) %>%
+  read_rds(data_path(directory = "mi", 
+                    type = "error_data",
+                    ext = "rds")) %>% 
   filter(health_board == "Scotland" & fy %in% fy_in_pub) %>%
   mutate(perc = format_perc(total_errors / records * 100)
   ) %>%
