--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -138,7 +138,7 @@ est_date3 <- dmy(01042023)
               paste0("",
              "**Please note:** ",
              "*Due to staffing issues NHS Orkney were unable to provide data for ",
-             "2022/23 (Q3 and Q4) and 2023/24 (Q1).*"),
+             "2022/23 (Q3 and Q4) and 2023/24 (Q1 and Q2).*"),
               hb == "NHS Grampian" & sel_fy == fin_year(date22_23) ~
                paste0("",
              "**Please note:** ",
@@ -150,8 +150,8 @@ est_date3 <- dmy(01042023)
              hb == "NHS Shetland" & sel_fy == fin_year(date22_23) ~
                paste0("",
              "**Please note:** ",
-             "*NHS Shetland do not have a PDS worker in post for 2022/23 Q2 and Q3, ",
-             "and therefore are unable to provide PDS allocation and contact dates for referrals ",
+             "*NHS Shetland do not have a PDS worker in post for 2022/23 Q2 and Q3",
+             "and 2023/24 Q1 and Q2, therefore are unable to provide PDS allocation and contact dates for referrals ",
              "in these quarters. This explains the large increase seen in their query rate in 2022/23 ",
              "as the waiting list will exceed 6 months for many. Once a PDS worker has been assigned ",
              "these dates will be completed.*"),
