--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -109,7 +109,7 @@ Row
 
 **Scotland** – Due to staffing issues the *2022/23* and *2023/24* Scotland figure does not include data from the following areas for the stated quarters : NHS Orkney 2022/23 (*Q3 and Q4*) and 2023/24 (*Q1* and *Q2*). 
 
-**NHS Orkney** – Due to IT staff issues in *2022/23* and lack of access to a Consultant Psychiatrist in *2023/24*, NHS Orkney were unable to provide data for 2022/23 (*Q3*, *Q4*) and 2023/24 (*Q1* and *Q2*).
+**NHS Orkney** – Due to IT staff issues and lack of access to a Consultant Psychiatrist in *2022/23* and *2023/24*, NHS Orkney were unable to provide data for 2022/23 (*Q3*, *Q4*) and 2023/24 (*Q1* and *Q2*).
 
 **NHS Shetland** - NHS Shetland do not have a PDS worker in post for *2022/23* *Q2, Q3* and *Q4*, and *2023/24 Q1 and Q2*. Therefore, NHS Shetland are unable to provide PDS allocation and contact dates for referrals in these quarters.  This explains the large increase seen in their query rate in *2022/23* as the waiting list will exceed 6 months for many. Once a PDS worker has been assigned these dates will be completed.
 
